Kube/1.5./deploy-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dn
  labels:
    app: nginxapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginxapp
  template:
    metadata:
      labels:
        app: nginxapp
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
