Kube/1.5./service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-mu
spec:
  selector:
    app: mu
  ports:
  - name: tcp-80
    protocol: TCP
    port: 80
    targetPort: 80
