Kube/1.5./service-frontend.yml

apiVersion: v1
kind: Service
metadata:
  name: svc-n
spec:
  selector:
    app: nginxapp
  ports:
  - name: tcp-80
    protocol: TCP
    port: 80
    targetPort: 80
