Kube/1.5./ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  ingressClassName: nginx
  rules:
  - host: kube.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-mu
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: svc-n
            port:
              number: 80
